# d-medic

./: .gitignore  D-Medic-Teknik-Dokuman-v1.1.docx  DESIGN.md  LICENSE  README.md  REPO_STANDARDS.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  tsconfig.node.json  vite.config.ts
.github/: FUNDING.yml
src/: i18n.ts  main.ts
src-tauri/: Cargo.toml  app.manifest  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/: verification.json
src-tauri/resources/guides/: activation-error.json  browser-reset.json  bsod-analysis.json  bsod-deep-analysis.json  clean-install-win11.json  cpu-incompatible.json  defender-full-scan.json  disk-cleanup.json  driver-rollback.json  driver-update.json  efi-partition-resize.json  fast-startup-disable.json  malware-scan.json  mbr2gpt.json  network-reset.json  pagefile-tune.json  ram-upgrade.json  secure-boot.json  smart-disk-replace.json  ssd-migration.json  tpm-enable.json
src-tauri/src/: error.rs  lib.rs  logging.rs  main.rs  paths.rs
src-tauri/src/action/: bcd.rs  debloat.rs  defrag.rs  dism.rs  dns.rs  hibernation.rs  mod.rs  pagefile.rs  power_plan.rs  recovery.rs  services_off.rs  sfc.rs  startup_clean.rs  temp_clean.rs  vbs.rs  visual_effects.rs  wu_reset.rs
src-tauri/src/commands/: action.rs  defrag.rs  guide.rs  mod.rs  profile.rs  scan.rs  snapshot.rs  system.rs  uninstall.rs  verification.rs
src-tauri/src/defrag/: bitmap.rs  engine.rs  map.rs  mod.rs  retrieval.rs  volume.rs
src-tauri/src/diagnostic/: batch.rs  bloatware.rs  boot.rs  events.rs  mod.rs  network.rs  power.rs  ram.rs  registry.rs  registry_state.rs  security.rs  services.rs  sfc_dism.rs  startup.rs  storage.rs  update.rs  wmi.rs
src-tauri/src/guide/: loader.rs  mod.rs  schema.rs
src-tauri/src/models/: defrag.rs  diagnostic.rs  mod.rs  plan.rs  profile.rs  snapshot.rs  uninstall.rs
src-tauri/src/parse/: cbs_log.rs  event_log.rs  json.rs  mod.rs
src-tauri/src/profile/: mod.rs
src-tauri/src/ps/: batch.rs  mod.rs  runner.rs  wait.rs
src-tauri/src/snapshot/: mod.rs  reg_export.rs  restore_point.rs  service_state.rs  storage.rs
src-tauri/src/uninstall/: inventory.rs  leftover.rs  mod.rs  quarantine.rs  remove.rs  runner.rs
src-tauri/src/verification/: loader.rs  mod.rs  schema.rs
src/assets/styles/: main.css
src/components/action/: ActionPlanList.vue  ExecutionMonitor.vue  PlanItemRow.vue  ProfileSelector.vue  RebootPrompt.vue  ResultSummary.vue
src/components/common/: BaseBadge.vue  BaseButton.vue  BaseCard.vue  BaseInput.vue  BaseModal.vue  BaseSelect.vue  BaseToggle.vue  BaseTooltip.vue  EmptyState.vue  ProgressBar.vue  SourceBadge.vue  SourceList.vue  Spinner.vue  StatPill.vue  TabBar.vue
src/components/dashboard/: QuickTools.vue  SystemDetails.vue
src/components/defrag/: ClusterMap.vue  DefragControls.vue  FragReport.vue
src/components/diagnostic/: ActionTypeBadge.vue  CategoryIcon.vue  DiagnosticCard.vue  DiagnosticList.vue  FindingDetails.vue  GainBadge.vue  PriorityBadge.vue  PriorityFilter.vue  ScanProgress.vue  ScanSummary.vue
src/components/guide/: GuideCard.vue  GuideLibrary.vue  GuideStep.vue  GuideViewer.vue
src/composables/: useDefrag.ts  useEvents.ts  useGuide.ts  useInvoke.ts  useScan.ts  useTheme.ts  useToast.ts  useUninstall.ts
src/constants/: categories.ts  nav.ts  profiles.ts
src/locales/: en.json  tr.json
src/stores/: defrag.ts  execution.ts  guides.ts  nav.ts  plan.ts  scan.ts  settings.ts  snapshots.ts  system.ts  uninstall.ts  verification.ts
src/types/: defrag.ts  diagnostic.ts  guide.ts  index.ts  plan.ts  profile.ts  snapshot.ts  system.ts  uninstall.ts  verification.ts
src/utils/: devlog.ts  format.ts
src/views/: AboutView.vue  DashboardView.vue  DefragView.vue  ExecuteView.vue  GuidesView.vue  HistoryView.vue  PlanView.vue  ScanView.vue  SettingsView.vue  UninstallView.vue
(+8 files in other folders)
