[package]
name = "d-medic"
version = "0.1.0"
description = "Windows 11 Sistem Tanılama & Optimizasyon Toolkit"
authors = ["D-Medic"]
license = "MIT"
edition = "2021"
rust-version = "1.75"

[lib]
name = "d_medic_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[target.'cfg(windows)'.build-dependencies]
winresource = "0.1"

[dependencies]
tauri = { version = "2.1", features = [] }
tauri-plugin-shell = "2.0"
tauri-plugin-fs = "2.0"
tauri-plugin-log = "2.0"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
simd-json = "0.13"

tokio = { version = "1.41", features = ["full"] }
async-trait = "0.1"

thiserror = "1.0"
anyhow = "1.0"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"

uuid = { version = "1.11", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"

memchr = "2.7"
blake3 = "1.5"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_System_Wmi",
    "Win32_System_Com",
    "Win32_System_Services",
    "Win32_System_Registry",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
    "Win32_System_SystemInformation",
    "Win32_Storage_FileSystem",
    "Win32_Foundation",
    "Win32_Security",
] }

[features]
custom-protocol = ["tauri/custom-protocol"]

[profile.dev]
opt-level = 1
incremental = true

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
